--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,33 @@
 body {
-	width: 800px;
+	width: 100%;
+	margin: auto;
+	font-family: 'Open Sans', sans-serif;
+	background: #D1D3D4;
 }
 
-img {
-	width: 800px;
+header {
+	background-color: #414042;
+	height: 10%;
+}
+
+.nav {
+	width: 100%;
+	margin: auto;
+}
+
+#logo {
+	max-width: 200px;
+	margin-left: 20px;
+    margin-right: auto;
+	margin-top: 30px;
+}
+
+.persona {
+	width: 80%;
+	max-width: 800px;
+	margin: auto;
+}
+
+.persona img {
+	width: 100%;
 }
